# json-poc

./: example_return_value.py  jmes_path_script.py  pyproject.toml  script.py
