[tool.poetry]
name = "json-playground"
version = "0.1.0"
description = ""
authors = ["ddot-bit <dpuducay@gmail.com>"]
readme = "README.md"
packages = [{include = "json_playground"}]

[tool.poetry.dependencies]
python = "^3.9"
jmespath = "^1.0.1"
jsonpath-ng = "^1.5.3"
json-merge-patch = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
